polychem/src/polymerizer/snapshots/polychem__polymerizer__polymer_chemistry__tests__parse_bond_with_duplicate_to.snap
---
source: polychem/src/polymerizer/polymer_chemistry.rs
description: bonds
expression: out
---
  × error parsing KDL

Error:   × duplicate node `to`, single node expected
   ╭─[test:3:5]
 2 │     to "Hydroxyl" at="Reducing End"
 3 │     to "Hydroxyl" at="Nonreducing End"
   ·     ─┬
   ·      ╰── unexpected node
 4 │ }
   ╰────

