polychem/src/polymerizer/snapshots/polychem__polymerizer__polymer_chemistry__tests__parse_bond_with_nonexistent_to.snap
---
source: polychem/src/polymerizer/polymer_chemistry.rs
description: bonds
expression: out
---
  × failed to validate polymer chemistry file
  ╰─▶   × the specifier "Hydroxyl" at="Nonreducing End" of="Alanine" cannot
      target
        │ any currently defined residues
        help: double-check for typos, or add new residues / groups that are
              targeted by this specifier
      
   ╭─[test:3:5]
 2 │     from "Hydroxyl" at="Reducing End"
 3 │     to "Hydroxyl" at="Nonreducing End" of="Alanine"
   ·     ────────────────────────┬───────────────────────
   ·                             ╰── targets nothing
 4 │ }
   ╰────

